fixed spacing of words under icons

--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ html {
 }
 
 .landing-icons .social-link .label {
-    display: none
+    display: none;
 }
 
 .landing-icons .social-link:hover {
@@ -207,7 +207,7 @@ html {
 .landing-icons .social-link:hover .label {
     display: unset!important;
     position: relative;
-    top: -2rem
+    top: -1rem
 }
 
 .landing-icons .email:hover .circle {
